# cube8

./: .gitignore  LICENSE  README.md  bom.csv
patternflow/: pyproject.toml
patternflow/patternflow/: pattern.py  patternflow.py
pcb/: cube8.OutJob  cube8.PcbDoc  cube8.PcbLib  cube8.PrjPcb  cube8.PrjPcbStructure  cube8.SchDoc  cube8.SchLib
simulation/: cube8.pdsprj
src/: driver.c  driver.h  main.c  reg51.h  test.c  test.h
