[tool.poetry]
name = "patternflow"
version = "0.1.0"
description = ""
authors = ["Xinhang Liu <xhliume@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pyqt5 = "^5.15.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
